--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#84FFC9" />
-    <meta
-      name="content"
-      content="JS, CSS, HTML, Parallax, Personal page, portfolio"
-    />
+    <meta name="theme-color" content="#2A3720" />
+    <meta name="content" content="JS, CSS, HTML, Parallax, Personal page, portfolio" />
     <meta name="description" content="Henry Zarza: Web developer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Henry Zarza - Web developer</title>
+    <title>Henry Zarza | Web developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
